Set.of() eliminated